[project]
name = "chemical-biology"
version = "1.0.0"
description = "The mass spectra repository will be a platform that enables similarity-based spectrum searches using various algorithms. The handling of data and metadata will be built on FAIR principles."
packages = []
authors = []
dependencies = [
    "ccmm-invenio>=1.1.0a1",
    "json5",
    "marshmallow-i18n-messages",
    "oarepo[s3,rdm]>=14.2.1b10.dev6,<15.0.0",
    "oarepo-app[production]==2.3.0",  # <---- here
    "python-dotenv",
]
requires-python = ">=3.14,<3.15"

[project.entry-points."invenio_assets.webpack"]
i18n = "i18n.webpack:theme"
components = "ui.components.webpack:theme"
ui_spectrum = "ui.spectrum.webpack:theme"
ui_dataset = "ui.dataset.webpack:theme"

[project.entry-points."invenio_i18n.translations"]
translations = "i18n"

[project.entry-points."invenio_db.alembic"]
repository = "common:alembic"

[project.entry-points."invenio_base.api_blueprints"]
admin_auth = "common.admin_auth:blueprint"

[project.entry-points."invenio_base.blueprints"]
ui_spectrum = "ui.spectrum:create_blueprint"
ui_dataset = "ui.dataset:create_blueprint"

[project.entry-points."invenio_base.finalize_app"]
ui_spectrum = "ui.spectrum:finalize_app"
ui_dataset = "ui.dataset:finalize_app"

[tool.uv.build-backend]
module-root = ""
module-name = [
    "common",
    "i18n",
    "ui",
    "spectrum",
    "dataset",
    "msrun",
]

[build-system]
requires = [
    "uv_build>=0.8.7,<0.9.0",
]
build-backend = "uv_build"
